--- a/frontend/src/components/MainNavbar/style.css
+++ b/frontend/src/components/MainNavbar/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: GoogleSans;
-    src: url(../ProductSans-Regular.ttf);
+    src: url(../fonts/ProductSans-Regular.ttf);
   } 
 
 .Navbar {
@@ -13,6 +13,7 @@
     padding-left: 1.5rem;
     padding-right: 1.5rem;
     font-family: GoogleSans;
+    z-index: 100 !important;
 }
 .Navbar-Brand {
     color: #FFF;
